--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">Je suis EDEMESSI 'nair0lf32' florian, étudiant en medecine à la faculté des sciences de la santé (FSS) de cotonou.
-                      passionné de développement informatique, je suis un touche-à-tout dans le domaine. Du développement web au graphisme, en passsant par la programmation desktop, android
-                      la modélisation/animation 3D, le motion graphics 2D, le montage vidéo, la vfx, le beatmaking, et un peu de game-design. Je me spécialise actuellement dans le
-                      coding mais je continue toujours d'apprendre. Quand je ne bosse pas à l'hopital (vive la medecine), il m'arrive de 'Gamer'.
-                      Probablement mon principal hobby, j'ai grandi avec le jeu-vidéo (mario,pokémon,zelda,GTA...). actuellement je perds de nombreuses heures sur league of legends et quelques 
+                      passionné de développement informatique, je suis un touche-à-tout dans le domaine. Du développement web au graphisme, en passsant par le desktop, android
+                      la modélisation/animation 3D, le motion graphics 2D, le montage vidéo, la vfx, le beatmaking, et un peu de game-design. Je ne suis évidemment pas un expert dans 
+                      tous ces domaines et actuellement je cherche à me concentrer plus sur le coding. Je continue toujours d'apprendre et de m'améliorer. Quand je ne prends pas les constantes à l'hopital (vive l'externat)
+                       il m'arrive de Jouer à quelques jeux vidéo. Probablement mon principal hobby depuis tout petit (mario,pokémon,zelda,GTA...). Actuellement je perds de nombreuses heures sur league of legends et quelques 
                       jeux solo que mon ordinateur me permet de faire tourner. 
                        </p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">Ceci est ma page personnelle, hébergée sur github. Il s'agit d'un projet rapide (développée en 24H) qui me servira de couverture
