--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     behaviour: {
       // HIGHLY RECOMMENDED
-      //  uid: "...", // uniq identifer for the comments thread on your page (ex: your page id)
+      uid: "nair0lf32", // uniq identifer for the comments thread on your page (ex: your page id)
     },
 
     // configure your variables here
