--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>nair0lf32</title>
+        <meta name="description" content="Personnal github page of EDEMESSI 'nairolf32' Florian" />
+        <meta name="author" content="EDEMESSI Florian" />
+        <meta name="keywords" content="EDEMESSI,Florian,nairolf32,nair0lf32,github-page,personnal">
+        <title>EDEMESSI Florian 'nair0lf32'</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
