added-alt-to-imgs

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="EDEMESSI_Florian_nairolf32_avatar" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Bienvenue sur ma Page</h1>
                 <!-- Icon Divider-->
@@ -107,7 +107,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a
                     <div class="col-md-6 col-lg-4 mb-5">
                        
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/self.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/self.png" alt="EDEMESSI_Florian_nairolf32" />
                      </div>
             </div>
         </section>
