--- a/Lol fanzone/Videos.html
+++ b/Lol fanzone/Videos.html
@@ -42,7 +42,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;">Accueil</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"  href="/index.html" style="padding: 10px 20px;">Accueil</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Fanzone.html" style="padding: 10px 20px;">Fanzone</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Videos.html" style="padding: 10px 20px;">Videos</a>
 </li></ul>
@@ -51,7 +51,7 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" style="padding: 10px 20px;">Accueil</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link"  href="/index.html" style="padding: 10px 20px;">Accueil</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Fanzone.html" style="padding: 10px 20px;">Fanzone</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Videos.html" style="padding: 10px 20px;">Videos</a>
 </li></ul>
