--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ passionné de développement informatique, je suis un touche-à-tout dans le dom
                     </p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">Ceci est ma page personnelle, hébergée sur github. Il s'agit d'un projet rapide (développée en 24H) qui me servira de couverture
                     en attendant de réaliser un véritable portfolio (peut-etre...Si j'ai pas la flemme). il se peut que j'ajoute des trucs ou que je la modifie. Mais en attendant c'est une page unique avec un petit espace
-                    de commentaires. J'ai ajouté une page fanzone league of legends pour parler un peu d'un de mes jeux favoris. Vous pouvez y accéder via le menu ou en cliquant  <a class="text-white" href="/lol fanzone.html">ici</a>.</br> 
+                    de commentaires. J'ai ajouté une page fanzone league of legends pour parler un peu d'un de mes jeux favoris. Vous pouvez y accéder via le menu ou en cliquant  <a class="text-white" href="/Lol fanzone/Fanzone.html">ici</a>.</br> 
                     </p></div>
                 </div>
             </div>
