removed-false-suggestion -in-text

--- a/Lol fanzone/Fanzone.html
+++ b/Lol fanzone/Fanzone.html
@@ -120,7 +120,7 @@
         </div>
         <p class="u-large-text u-text u-text-variant u-text-3">
           <br>&nbsp;Sinon vous pouez toujours visiter le site web officiel de Riot games (que j'appelle affectueusement rito). En fait c'est plutot le lien vers le site de league of legends car désormais rito a créé d'autres jeux (Valorant, Legends of Runeterra, Teamfight tactics..): <a href="https://euw.leagueoflegends.com/fr-fr/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-5">Site officiel du jeu</a>.&nbsp;&nbsp;<br>
-          <br>Il y a dessus un tutoriel qui explique mieux les règles du jeu si vous etes interressés. Par contre attention, league of legends n'a pas que des aspects positifs..mais ça c'est tout un débat que je n'aborderai pas ici.<br>J'ai ajouté dans le menu une page vidéos , avec les meilleurs clips et trailers de league of legends.&nbsp;<br>vous pouvez y accéder en cliquant sur le boutton vidéos en bas également&nbsp;<br>
+          <br>Il y a dessus un tutoriel qui explique mieux les règles du jeu si vous etes interressés. Par contre attention, league of legends n'a pas que des aspects positifs..mais ça c'est tout un débat que je n'aborderai pas ici.<br>J'ai ajouté dans le menu une page vidéos , avec les meilleurs clips et trailers de league of legends.&nbsp;<br>
           <br>Bon, sur ce je vous laisse, les minions apparaissent dans 30 secondes. Peut-etre pourrions nous nous croiser dans la faille de l'invocateur. "Bonne chance dans les champs de justice"
         </p>
       </div>
