--- a/Lol fanzone/Fanzone.html
+++ b/Lol fanzone/Fanzone.html
@@ -29,7 +29,7 @@
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#044e94">
   </head>
-  <body class="u-body"><header class="u-clearfix u-grey-90 u-header u-header" id="sec-c4f8">< class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-grey-90 u-header u-header" id="sec-c4f8"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="981" data-image-height="920">
           <img src="images/avataaars.svg" class="u-logo-image u-logo-image-1" data-image-width="64">
         </a>
