--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body id="page-top">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg bg-secondary text-lowercase fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">nair0lf32</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button"
@@ -243,7 +243,7 @@
                         petit espace
                         de commentaires. J'ai ajouté une page fanzone league of legends pour parler un peu d'un de mes
                         jeux favoris. Vous pouvez y accéder via le menu ou en cliquant <a class="text-white"
-                            href="/Lol fanzone/Fanzone.html">ici</a>.</br>
+                            href="/lol-fanzone.html">ici</a>.</br>
                     </p>
                 </div>
             </div>
@@ -339,9 +339,9 @@
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-4">This website is powered by freelance and github pages (host)</h4>
+                    <h4 class="text-uppercase mb-0">Ce site web est alimenté par github pages et réalisé avec "freelance"</h4>
                     <p class="lead mb-0">
-                        Freelance is a free to use, MIT licensed Bootstrap theme created by
+                        Freelance est un thème Bootstrap gratuit, sous license MIT créé par
                         <a href="http://startbootstrap.com">Start Bootstrap</a>
                         .
                     </p>
