--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -45,7 +45,7 @@
 
 <body id="page-top">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg bg-secondary text-lowercase fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">nair0lf32</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button"
@@ -56,14 +56,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/index.html">Accueil
-                            </a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="#About">A propos</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="#comment">Commentaire</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="/lol-fanzone.html">Lol fanzone</a></li>
+                            href="/index.html">Accueil</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#About">A
+                            propos</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
                             href="/Lol fanzone/Videos.html">Videos</a></li>
                 </ul>
@@ -205,29 +201,29 @@
             <div class="carousel-item active">
                 <img src="/assets/img/lolpics/wpp.jpg" class="d-block w-100" alt="lol-wpp">
                 <div class="carousel-caption">
-                    <h5 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h5>
-                    <p class="py-1 text-center"> from Riot Games .inc (Not approved)</p>
+                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
+                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/assets/img/lolpics/wpp2.jpg" class="d-block w-100" alt="lol-wpp2">
                 <div class="carousel-caption ">
-                    <h5 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h5>
-                    <p class="py-1 text-center"> from Riot Games .inc (Not approved)</p>
+                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
+                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/assets/img/lolpics/wpp3.jpg" class="d-block w-100" alt="lol-wpp3">
                 <div class="carousel-caption ">
-                    <h5 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h5>
-                    <p class="py-1 text-center"> from Riot Games .inc (Not approved)</p>
+                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
+                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/assets/img/lolpics/wpp4.png" class="d-block w-100" alt="lol-wpp4">
                 <div class="carousel-caption ">
-                    <h5 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h5>
-                    <p class="py-1 text-center"> from Riot Games .inc (Not approved)</p>
+                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
+                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
                 </div>
             </div>
         </div>
@@ -244,6 +240,19 @@
     </div>
 
 
+    <!-- Yes I am using a whole section as a separator (design purposes). I have no shame XD-->
+    <section class="page-section bg-secondary text-white mb-0" id="theGame">
+        <!-- Comment Section Heading-->
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Le jeu: </h2>
+        <!-- Icon Divider-->
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-gamepad"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+    </section>
+
+
 
 
     <!-- About Section-->
@@ -257,43 +266,55 @@
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-book"></i></div>
+                <div class="divider-custom-icon"><i class="fas fa-scroll"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
             <!-- About Section Content-->
             <div class="row">
-                <div class="lead text-white text-center">
-                    <p Salut! Ceci est une page fanzone de league of legends réalisée par nair0lf32 (votre
-                        serviteur).<br />Vu le temps que je consacre à ce jeu
-                    je me suis dit pourquoi ne pas en parler un peu? League of legends est
-                    un jeu réalisé et appartenant à Riot games Inc. Un petit studio au
-                    départ qui aujourd'hui est une grosse entreprise rachetée par tencent
-                    games (le géant du jeu vidéo chinois). Le jeu a bien évolué au fil du
-                    temps (depuis 2009) mais personnellement je l'ai rejoint environ en
-                    2016 (saison 6 je crois). J'ai débuté sur le serveur europe de l'ouest
-                    (euw) avec un pote "freddy"&nbsp;
-                    <a href="https://euw.op.gg/summoner/userName=blckGamer">@Blckgamer</a>
-                    qui est actuellement platine. Moi je suis resté un éternel bronze.
-                    J'ai débuté avec un compte
-                    <a href="https://nicepage.com/c/sale-html-templates">@nairolfXnairolf</a>
-                    qui a fini banni (je vous jure j'ai rien fait), puis j'ai emprunté le
-                    compte de mon frère
-                    <a href="https://euw.op.gg/summoner/userName=harmelford">@harmelford</a>
-                    qui est actuellement mon compte principal. J'ai un compte secondaire
-                    sous le pseudo
-                    <a href="https://euw.op.gg/summoner/userName=medic229">@medic229</a>.
-                    Il y a ici une vidéo de nevercake&nbsp; qui explique ce qu'est
-                    league of legends (avec un peu de promo en plus):<br />
-                    <br />
+                <div class="lead text-white text-center mb-0">
+                    <p> Salut! Ceci est une page fanzone de league of legends réalisée par nair0lf32 (moi quoi).
+                        <br />Vu le temps que je consacre à ce jeu
+                        je me suis dit pourquoi ne pas en parler un peu? Alors League of legends est
+                        un jeu réalisé et appartenant à Riot games Inc. Un petit studio au
+                        départ qui aujourd'hui est une grosse entreprise rachetée par tencent
+                        games (le géant du jeu vidéo chinois). Le jeu a bien évolué au fil du
+                        temps (depuis 2009) mais personnellement je l'ai rejoint en
+                        2016 (saison 6 je crois). J'ai débuté sur le serveur europe de l'ouest
+                        (euw) avec un pote "freddy"&nbsp;
+                        <a href="https://euw.op.gg/summoner/userName=blckGamer">Blckgamer</a>
+                        qui est actuellement platine. Moi je suis resté un éternel bronze.
+                        J'ai débuté avec un compte
+                        <a href="https://euw.op.gg/summoner/userName=florianfXnairolf">florianXnairolf</a>
+                        qui a fini banni (je vous jure j'ai rien fait), puis j'ai emprunté le
+                        compte de mon frère
+                        <a href="https://euw.op.gg/summoner/userName=harmelford">harmelford</a>
+                        qui est actuellement mon compte principal. J'ai un compte secondaire
+                        sous le pseudo
+                        <a href="https://euw.op.gg/summoner/userName=medic229">medic229</a>.
+                        Il y a ici quelqes vidéos qui expliquent ce qu'est
+                        league of legends (promo en bonus):<br />
+                        <br />
                     </p>
 
-                        <div class="embed-responsive embed-responsive-1">
-                            <iframe 
-                                src="https://www.youtube.com/embed/uhZTFIfRhqs?playlist=uhZTFIfRhqs&amp;loop=1&amp;mute=0&amp;showinfo=0&amp;controls=0&amp;start=0"
-                                frameborder="0" allowfullscreen=""></iframe>
-                        </div>
+                    <!-- 1:1 aspect ratio -->
+                    <div class="class=" ratio ratio-1x1"">
+                        <iframe src="https://www.youtube.com/embed/uhZTFIfRhqs" title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
 
-                    <p class="lead text-white text-center">
+                    <!-- 1:1 aspect ratio -->
+                    <div class="class=" ratio ratio-1x1"">
+                        <iframe src="https://www.youtube.com/embed/SwlBTktgMM4"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+
+
+
+                    <p class="lead text-white text-center mb-0">
                         <br />&nbsp;Sinon vous pouez toujours visiter le site web officiel de
                         Riot games (que j'appelle affectueusement rito). En fait c'est plutot
                         le lien vers le site de league of legends car désormais rito a créé
@@ -301,9 +322,11 @@
                         <a href="https://euw.leagueoflegends.com/fr-fr/">Site officiel du jeu</a>.&nbsp;&nbsp;<br />
                         <br />Il y a dessus un tutoriel qui explique mieux les règles du jeu
                         si vous etes interressés. Par contre attention, league of legends n'a
-                        pas que des aspects positifs..mais ça c'est tout un débat que je
+                        pas que des aspects positifs et on vous en parle sur le site du jeu
+                        (commnauté la plus toxique du gaming? XD).
+                        Mais ça c'est tout un débat que je
                         n'aborderai pas ici.<br />J'ai ajouté dans le menu une page vidéos ,
-                        avec les meilleurs clips et trailers de league of legends.&nbsp;<br />
+                        avec les meilleurs clips et trailers (selon moi) de league of legends.&nbsp;<br />
                         <br />Bon, sur ce je vous laisse, les minions apparaissent dans 30
                         secondes. Peut-etre pourrions nous nous croiser dans la faille de
                         l'invocateur. "Bonne chance dans les champs de justice"
@@ -315,37 +338,17 @@
 
 
 
-
-    <!-- Comment Section-->
-    <section class="page-section bg-secondary text-white mb-0" id="comment">
+    <!-- Another separator I am totally asssuming (proudly XD )-->
+    <section class="page-section bg-secondary text-white mb-0" id="disclaimer">
         <!-- Comment Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Commentaires</h2>
-
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Disclaimer</h2>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fas fa-comments"></i></div>
+            <div class="divider-custom-icon"><i class="fas fa-gavel"></i></div>
             <div class="divider-custom-line"></div>
         </div>
-
-        <div class="container">
-            <div id='metype-container' class='iframe-container' data-metype-account-id='1000949'
-                data-metype-host='https://www.metype.com/' data-metype-primary-color='#0000ff'
-                data-metype-bg-color='#ffffff' data-metype-font-color='#4a4a4a'></div>
-            <script type='text/javascript'>
-                var metypeContainer = document.getElementById("metype-container"),
-                    page_url = metypeContainer.getAttribute("data-metype-page-url");
-                metypeContainer.setAttribute('data-metype-page-url', page_url || window.location.href);
-                metypeContainer.setAttribute('data-metype-window-height', window.innerHeight);
-                metypeContainer.setAttribute('data-metype-screen-width', window.screen.width);
-                talktype(function () {
-                    talktype.commentWidgetIframe(metypeContainer);
-                });
-            </script>
-        </div>
-        
     </section>
-
 
 
 
@@ -354,12 +357,12 @@
         <div class="container">
             <div class="row">
                 <!-- Footer About Text-->
-                    <h4 class="text-uppercase mb-4">This website is powered by freelance and github pages (host)</h4>
-                    <p class="lead mb-0">
-                        Freelance is a free to use, MIT licensed Bootstrap theme created by
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                        .
-                    </p>
+                <p class="lead mb-0">
+                    Ce site n'est pas n'est pas approuvé par Riot Games et ne reflète pas les points de vue ou opinions
+                    de Riot Games ou de toute personne officiellement impliquée dans la production ou la gestion
+                    des propriétés de Riot Games. Riot Games et toutes les propriétés associées sont des marques ou des
+                    marques déposées de Riot Games, Inc.
+                </p>
             </div>
         </div>
     </footer>
