--- a/lol-videos.html
+++ b/lol-videos.html
@@ -184,70 +184,92 @@
     </script>
 
 
-    <!-- carousel -->
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                aria-label="Slide 4"></button>
-        </div>
-        <!-- carousel images -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="/assets/img/lolpics/wpp.jpg" class="d-block w-100" alt="lol-wpp">
-                <div class="carousel-caption">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
-                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/img/lolpics/wpp2.jpg" class="d-block w-100" alt="lol-wpp2">
-                <div class="carousel-caption ">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
-                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/img/lolpics/wpp3.jpg" class="d-block w-100" alt="lol-wpp3">
-                <div class="carousel-caption ">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
-                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/img/lolpics/wpp4.png" class="d-block w-100" alt="lol-wpp4">
-                <div class="carousel-caption ">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
-                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
 
 
-    <!-- Yes I am using a whole section as a separator (design purposes). I have no shame XD-->
-    <section class="page-section bg-secondary text-white mb-0" id="theGame">
+    <!--Hymnes-->
+    <section class="page-section bg-secondary text-white mb-0" id="anthems">
         <!-- Comment Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Le jeu: </h2>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Hymnes du jeu</h2>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fas fa-gamepad"></i></div>
+            <div class="divider-custom-icon"><i class="fas fa-music"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+
+
+
+        <!-- carousel -->
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride=false data-bs-keyboard=false>
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+            </div>
+            <!-- carousel images -->
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval=false>
+                    <div class="ratio ratio-16x9 youvid">
+                        <iframe src="https://www.youtube.com/embed/fmI_Ndrxy14" title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval=false>
+                    <div class="ratio ratio-16x9 youvid">
+                        <iframe src="https://www.youtube.com/embed/Zasx9hjo4WY" title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval=false>
+                    <div class="ratio ratio-16x9 youvid">
+                        <iframe src="https://www.youtube.com/embed/aR-KAldshAE" title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval=false>
+                    <div class="ratio ratio-16x9 youvid">
+                        <iframe src="https://www.youtube.com/embed/4Twd965VzX4" title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev" data-bs-keyboard=false>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next" data-bs-keyboard=false>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+
+
+
+    <!-- Favorites cinematics -->
+    <section class="page-section bg-secondary text-white mb-0" id="cinematics">
+        <!-- Comment Section Heading-->
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Cinématiques Favorites</h2>
+        <!-- Icon Divider-->
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-film"></i></div>
             <div class="divider-custom-line"></div>
         </div>
     </section>
@@ -255,90 +277,22 @@
 
 
 
-    <!-- About Section-->
-    <section class="page-section bg-secondary text-white mb-0 lol-about img-fluid" id="about">
-        <div class="container">
-
-            <img class="img-fluid" src="assets/img/lolpics/lol-logo.png" alt="EDEMESSI_FLorian_nairolf32" />
-
-            <!-- About Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-white">A propos</h2>
-            <!-- Icon Divider-->
-            <div class="divider-custom divider-light">
-                <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-scroll"></i></div>
-                <div class="divider-custom-line"></div>
-            </div>
-            <!-- About Section Content-->
-            <div class="row">
-                <div class="lead text-white text-center mb-0">
-                    <p> Salut! Ceci est une page fanzone de league of legends réalisée par nair0lf32 (moi quoi).
-                        <br />Vu le temps que je consacre à ce jeu
-                        je me suis dit pourquoi ne pas en parler un peu? Alors League of legends est
-                        un jeu réalisé et appartenant à Riot games Inc. Un petit studio au
-                        départ qui aujourd'hui est une grosse entreprise rachetée par tencent
-                        games (le géant du jeu vidéo chinois). Le jeu a bien évolué au fil du
-                        temps (depuis 2009) mais personnellement je l'ai rejoint en
-                        2016 (saison 6 je crois). J'ai débuté sur le serveur europe de l'ouest
-                        (euw) avec un pote "freddy"&nbsp;
-                        <a href="https://euw.op.gg/summoner/userName=blckGamer">Blckgamer</a>
-                        qui est actuellement platine. Moi je suis resté un éternel bronze.
-                        J'ai débuté avec un compte
-                        <a href="https://euw.op.gg/summoner/userName=florianfXnairolf">florianXnairolf</a>
-                        qui a fini banni (je vous jure j'ai rien fait), puis j'ai emprunté le
-                        compte de mon frère
-                        <a href="https://euw.op.gg/summoner/userName=harmelford">harmelford</a>
-                        qui est actuellement mon compte principal. J'ai un compte secondaire
-                        sous le pseudo
-                        <a href="https://euw.op.gg/summoner/userName=medic229">medic229</a>.
-                        Il y a ici quelqes vidéos qui expliquent ce qu'est
-                        league of legends (promo en bonus):<br />
-                        <br />
-                    </p>
-
-                    <!-- 16:9 aspect ratio -->
-                    <div class="ratio ratio-16x9 youvid">
-                        <iframe src="https://www.youtube.com/embed/uhZTFIfRhqs" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-
-                    <!-- 16:9 aspect ratio -->
-                    <div class="ratio ratio-16x9 youvid">
-                        <iframe src="https://www.youtube.com/embed/SwlBTktgMM4"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-
-
-
-                    <p class="lead text-white text-center mb-0">
-                        <br />&nbsp;Sinon vous pouez toujours visiter le site web officiel de
-                        Riot games (que j'appelle affectueusement rito). En fait c'est plutot
-                        le lien vers le site de league of legends car désormais rito a créé
-                        d'autres jeux (Valorant, Legends of Runeterra, Teamfight tactics..):
-                        <a href="https://euw.leagueoflegends.com/fr-fr/">Site officiel du jeu</a>.&nbsp;&nbsp;<br />
-                        <br />Il y a dessus un tutoriel qui explique mieux les règles du jeu
-                        si vous etes interressés. Par contre attention, league of legends n'a
-                        pas que des aspects positifs et on vous en parle sur le site du jeu
-                        (commnauté la plus toxique du gaming? XD).
-                        Mais ça c'est tout un débat que je
-                        n'aborderai pas ici.<br />J'ai ajouté dans le menu une page vidéos ,
-                        avec les meilleurs clips et trailers (selon moi) de league of legends.&nbsp;<br />
-                        <br />Bon, sur ce je vous laisse, les minions apparaissent dans 30
-                        secondes. Peut-etre pourrions nous nous croiser dans la faille de
-                        l'invocateur. "Bonne chance dans les champs de justice"
-                    </p>
-                </div>
-            </div>
+    <!-- Esport Universe -->
+    <section class="page-section bg-secondary text-white mb-0" id="esports">
+        <!-- Comment Section Heading-->
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Univers Esports</h2>
+        <!-- Icon Divider-->
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-trophy"></i></div>
+            <div class="divider-custom-line"></div>
         </div>
     </section>
 
 
 
-    <!-- Another separator I am totally asssuming (proudly XD )-->
+
+    <!-- Another Disclaimer-->
     <section class="page-section bg-secondary text-white mb-0" id="disclaimer">
         <!-- Comment Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Disclaimer</h2>
@@ -349,7 +303,6 @@
             <div class="divider-custom-line"></div>
         </div>
     </section>
-
 
 
     <!-- Footer-->
