fixed-lol-videos-page

--- a/lol-videos.html
+++ b/lol-videos.html
@@ -58,10 +58,8 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
                             href="/index.html">Accueil</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#About">A
-                            propos</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="/Lol fanzone/Videos.html">Videos</a></li>
+                            href="/lol-fanzone.html">Fanzone</a></li>
                 </ul>
             </div>
         </div>
@@ -187,7 +185,7 @@
 
 
     <!--Hymnes-->
-    <section class="page-section bg-secondary text-white mb-0" id="anthems">
+    <section class="page-section bg-primary text-white mb-0" id="anthems">
         <!-- Comment Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Hymnes du jeu</h2>
         <!-- Icon Divider-->
@@ -197,66 +195,73 @@
             <div class="divider-custom-line"></div>
         </div>
 
-
-
-        <!-- carousel -->
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride=false data-bs-keyboard=false>
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
-            </div>
-            <!-- carousel images -->
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval=false>
-                    <div class="ratio ratio-16x9 youvid">
-                        <iframe src="https://www.youtube.com/embed/fmI_Ndrxy14" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="carousel-item" data-bs-interval=false>
-                    <div class="ratio ratio-16x9 youvid">
-                        <iframe src="https://www.youtube.com/embed/Zasx9hjo4WY" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="carousel-item" data-bs-interval=false>
-                    <div class="ratio ratio-16x9 youvid">
-                        <iframe src="https://www.youtube.com/embed/aR-KAldshAE" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="carousel-item" data-bs-interval=false>
-                    <div class="ratio ratio-16x9 youvid">
-                        <iframe src="https://www.youtube.com/embed/4Twd965VzX4" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
+        <!-- Videos-->
+        <div class="row">
+            <div class="col-lg-auto ms-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/fmI_Ndrxy14" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
             </div>
 
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev" data-bs-keyboard=false>
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next" data-bs-keyboard=false>
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/Zasx9hjo4WY" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/aR-KAldshAE" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/4Twd965VzX4" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto ms-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/r6zIGXun57U" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/fB8TyLTD7EE" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/i1IKnWDecwA" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/KbNL9ZyB49c" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -272,13 +277,114 @@
             <div class="divider-custom-icon"><i class="fas fa-film"></i></div>
             <div class="divider-custom-line"></div>
         </div>
+
+        <!-- videos -->
+        <div class="row">
+            <div class="col-lg-auto ms-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/0ngeSfH6SNs" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/axMByEiMkgk" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/44RqkYFgp7g" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/r4ufa7hik08" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto ms-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/0AvWV6Mk374" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/0nlJuwO0GDs" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/Wo1pFeLhNyU" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/5nzeQ-vHF34" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto ms-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/zmdkmPsmEnA" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/H1nRIX-qvbo" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/Xw46WPuXMk0" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/vzNcSvKCOyA" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+        </div>
+
     </section>
 
 
 
 
     <!-- Esport Universe -->
-    <section class="page-section bg-secondary text-white mb-0" id="esports">
+    <section class="page-section bg-primary text-white mb-0" id="esports">
         <!-- Comment Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Univers Esports</h2>
         <!-- Icon Divider-->
@@ -287,6 +393,55 @@
             <div class="divider-custom-icon"><i class="fas fa-trophy"></i></div>
             <div class="divider-custom-line"></div>
         </div>
+
+        <!-- videos -->
+        <div class="row">
+            <div class="col-lg-auto ms-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/j5QahFFHv0I"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/PX_IQkeXq9g"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/YDX6zNxXCiA"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto me-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/XUQ4ZI0h0-E"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-lg-auto ms-auto">
+                <div class="ratio ratio-16x9 youvid">
+                    <iframe src="https://www.youtube.com/embed/DLTUakdRmT8"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+
     </section>
 
 
