--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -61,7 +61,7 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#About">A
                             propos</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="/Lol fanzone/Videos.html">Videos</a></li>
+                            href="/lol-videos.html">Videos</a></li>
                 </ul>
             </div>
         </div>
