added-animations-file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/animations.css" rel="stylesheet" />
 
 
 
@@ -339,7 +340,8 @@
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-0">Ce site web est alimenté par github pages et réalisé avec "freelance"</h4>
+                    <h4 class="text-uppercase mb-0">Ce site web est alimenté par github pages et réalisé avec
+                        "freelance"</h4>
                     <p class="lead mb-0">
                         Freelance est un thème Bootstrap gratuit, sous license MIT créé par
                         <a href="http://startbootstrap.com">Start Bootstrap</a>
