--- a/lol-videos.html
+++ b/lol-videos.html
@@ -28,6 +28,7 @@
         type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/animations.css" rel="stylesheet" />
 
 
     <script type='text/javascript'>
@@ -398,8 +399,7 @@
         <div class="row">
             <div class="col-lg-auto ms-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/j5QahFFHv0I"
-                        title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/j5QahFFHv0I" title="YouTube video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -407,8 +407,7 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/PX_IQkeXq9g"
-                        title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/PX_IQkeXq9g" title="YouTube video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -416,8 +415,7 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/YDX6zNxXCiA"
-                        title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/YDX6zNxXCiA" title="YouTube video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -425,8 +423,7 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/XUQ4ZI0h0-E"
-                        title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/XUQ4ZI0h0-E" title="YouTube video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -434,8 +431,7 @@
 
             <div class="col-lg-auto ms-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/DLTUakdRmT8"
-                        title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/DLTUakdRmT8" title="YouTube video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
