--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -28,6 +28,8 @@
         type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/animations.css" rel="stylesheet" />
+
 
 
     <script type='text/javascript'>
@@ -306,8 +308,8 @@
 
                     <!-- 16:9 aspect ratio -->
                     <div class="ratio ratio-16x9 youvid">
-                        <iframe src="https://www.youtube.com/embed/SwlBTktgMM4"
-                            title="YouTube video player" frameborder="0"
+                        <iframe src="https://www.youtube.com/embed/SwlBTktgMM4" title="YouTube video player"
+                            frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
