--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <title>EDEMESSI Florian (nair0lf32)</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+
+    <!-- JQuery My boy :) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -20,6 +25,11 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/animations.css" rel="stylesheet" />
 
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
 
 
     <script type='text/javascript'>
@@ -36,6 +46,11 @@
 </head>
 
 <body id="page-top">
+    <!-- For loading purposes-->
+    <div class="flex-fill loader"> <img src="/assets/img/pac-man-spinner.svg" alt="pac-man-spinner from loading.io">
+        <p class="text-center text-white mb-0">loading...</p>
+    </div>
+    
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
@@ -356,11 +371,6 @@
         <div class="container"><small>Copyright &copy; nair0lf32 2021</small></div>
     </div>
 
-
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
 </body>
 
 </html>
