--- a/lol-videos.html
+++ b/lol-videos.html
@@ -12,6 +12,11 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
 
+    <!-- JQuery My boy :) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+
     <!--Bootstrap 5 css (place before custom css to avoid overrides)-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -30,6 +35,9 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/animations.css" rel="stylesheet" />
 
+    <script src="js/scripts.js"></script>
+
+
 
     <script type='text/javascript'>
         window.talktype = window.talktype || function (f) {
@@ -45,6 +53,11 @@
 </head>
 
 <body id="page-top">
+    <!-- For loading purposes-->
+    <div class="flex-fill loader"> <img src="/assets/img/pac-man-spinner.svg" alt="pac-man-spinner from loading.io">
+        <p class="text-center text-white mb-0">loading...</p>
+    </div>
+
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
@@ -475,8 +488,6 @@
         <div class="container"><small>Copyright &copy; nair0lf32 2021</small></div>
     </div>
 
-
-    <script src="js/scripts.js"></script>
 </body>
 
 </html>
