--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html lang="fr">
 
 <head>
+    <!--Meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Personnal github page of EDEMESSI 'nairolf32' Florian" />
+    <meta name="description" content="Personal github page of EDEMESSI 'nairolf32' Florian" />
     <meta name="author" content="EDEMESSI Florian" />
     <meta name="keywords" content="EDEMESSI,Florian,nairolf32,nair0lf32,github-page,personnal">
-    <title>EDEMESSI Florian (nair0lf32)</title>
+    <title>EDEMESSI Florian nair0lf32</title>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="EDEMESSI Florian nair0lf32" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://nair0lf32.github.io/" />
+    <meta property="og:description" content="Personal github page of EDEMESSI 'nairolf32' Florian">
+    <meta property="og:image" content="/assets/img/og-nair0lf32.png" />
+
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
@@ -50,7 +59,7 @@
     <div class="flex-fill loader"> <img src="/assets/img/pac-man-spinner.svg" alt="pac-man-spinner from loading.io">
         <p class="text-center text-white mb-0">loading...</p>
     </div>
-    
+
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
