--- a/lol-videos.html
+++ b/lol-videos.html
@@ -2,15 +2,23 @@
 <html lang="fr">
 
 <head>
+    <!--Meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Personnal github page of EDEMESSI 'nairolf32' Florian" />
+    <meta name="description" content="Personal github page of EDEMESSI 'nairolf32' Florian" />
     <meta name="author" content="EDEMESSI Florian" />
     <meta name="keywords" content="EDEMESSI,Florian,nairolf32,nair0lf32,github-page,personnal">
-    <title>EDEMESSI Florian (nair0lf32)</title>
+    <title>EDEMESSI Florian nair0lf32</title>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="EDEMESSI Florian nair0lf32" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://nair0lf32.github.io/lol-videos" />
+    <meta property="og:description" content="Personal github page of EDEMESSI 'nairolf32' Florian">
+    <meta property="og:image" content="/assets/img/og-nair0lf32.png" />
+
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-
 
     <!-- JQuery My boy :) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
