--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <body id="page-top">
     <!-- For loading purposes-->
-    <div class="flex-fill loader"> <img src="/assets/img/pac-man.svg" alt="pac-man-spinner from loading.io">
+    <div class="flex-fill loader"> <img src="/assets/img/pacman.svg" alt="pac-man-spinner from loading.io">
         <p class="text-center text-white mb-0">loading...</p>
     </div>
 
