--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://nair0lf32.github.io/" />
     <meta property="og:description" content="Personal github page of EDEMESSI 'nairolf32' Florian">
-    <meta property="og:image" content="https://github.com/nair0lf32/nair0lf32.github.io/blob/main/assets/img/og-nair0lf32.png"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/nair0lf32/nair0lf32.github.io/main/assets/img/og-nair0lf32.png"/>
 
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
