added some image animation

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <body id="page-top">
     <!-- For loading purposes-->
-    <div class="flex-fill loader"> <img src="/assets/img/pacman.svg" alt="pac-man-spinner from loading.io">
+    <div class="flex-fill loader img-hover-zoom"> <img src="/assets/img/pacman.svg" alt="pac-man-spinner from loading.io">
         <p class="text-center text-white mb-0">loading...</p>
     </div>
 
@@ -215,7 +215,9 @@
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image-->
+            <div class=" img-hover-zoom"> 
             <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="EDEMESSI_FLorian_nairolf32_avatar" />
+            </div>
             <!-- Masthead Heading-->
             <h1 class="masthead-heading text-uppercase mb-0">Bienvenue sur ma Page</h1>
             <!-- Icon Divider-->
@@ -234,8 +236,7 @@
             <!-- Portfolio Grid Items-->
             <div class="row justify-content-center">
                 <!-- Portfolio Item -->
-                <div class="col-md-6 col-lg-4 mb-5">
-                </div>
+                <div class="img-hover-zoom--colorize">
                 <img class="img-fluid" src="assets/img/portfolio/self.png" alt="EDEMESSI_FLorian_nairolf32" />
             </div>
         </div>
