--- a/lol-videos.html
+++ b/lol-videos.html
@@ -71,7 +71,7 @@
 
 <body id="page-top">
     <!-- For loading purposes-->
-    <div class="flex-fill loader"> <img src="/assets/img/pacman.svg" alt="pac-man-spinner from loading.io">
+    <div class="flex-fill loader img-hover-zoom"> <img src="/assets/img/pacman.svg" alt="pac-man-spinner from loading.io">
         <p class="text-center text-white mb-0">loading...</p>
     </div>
 
