animated picture on scroll

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image-->
-            <div class=" img-hover-zoom"> 
+            <div class=" img-hover-zoom avatar"> 
             <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="EDEMESSI_FLorian_nairolf32_avatar" />
             </div>
             <!-- Masthead Heading-->
@@ -236,8 +236,8 @@
             <!-- Portfolio Grid Items-->
             <div class="row justify-content-center">
                 <!-- Portfolio Item -->
-                <div class="img-hover-zoom--colorize">
-                <img class="img-fluid" src="assets/img/portfolio/self.png" alt="EDEMESSI_FLorian_nairolf32" />
+                <div class="photo-container">
+                <img class="img-fluid photo" src="assets/img/portfolio/self.png" alt="EDEMESSI_FLorian_nairolf32" />
             </div>
         </div>
     </section>
